--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <version>3.1.2.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
 
     </dependencies>
 
