--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/noticeboard
 spring.datasource.username=postgres
 spring.datasource.password=1234
 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
